# actix-tutorial

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs  models.rs  schema.rs
templates/: form.html  forms.html
